# python-dasa

./: README.rst  requirements.txt  setup.cfg  setup.py
dasa/: ciapi.py  config.py  osapi.py  utils.py
dasa/cmd/: __init__.py  dns_write_post.py  domain_change_post.py  domain_change_pre.py  domain_create_post.py  domain_create_pre.py  domain_destroy_post.py  domain_pointer_create_post.py  domain_pointer_create_pre.py  domain_pointer_destroy_post.py  sendSystemMessage_post.py  sendSystemMessage_pre.py  spamassassin_destroy_pre.py  spamassassin_edit_pre.py  user_activate_post.py  user_backup_compress_pre.py  user_backup_post.py  user_backup_pre.py  user_create_post.py  user_destroy_post.py  user_restore_post.py  user_restore_pre.py  user_suspend_post.py
