[metadata]
name = dasa
summary = DirectAdmin Server Agent
description-file =
    README.rst
author = DevelopersPL
author-email = noemail
home-page = https://github.com/DevelopersPL/python-dasa
classifier =
    Environment :: DirectAdmin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    dasa

[entry_points]
console_scripts =
    da_dns_write_post = dasa.cmd.dns_write_post:main
    da_domain_change_post = dasa.cmd.domain_change_post:main
    da_domain_change_pre = dasa.cmd.domain_change_pre:main
    da_domain_create_post = dasa.cmd.domain_create_post:main
    da_domain_create_pre = dasa.cmd.domain_create_pre:main
    da_domain_destroy_post = dasa.cmd.domain_destroy_post:main
    da_domain_pointer_create_post = dasa.cmd.domain_pointer_create_post:main
    da_domain_pointer_create_pre = dasa.cmd.domain_pointer_create_pre:main
    da_domain_pointer_destroy_post = dasa.cmd.domain_pointer_destroy_post:main
    da_spamassassin_edit_pre = dasa.cmd.spamassassin_edit_pre:main
    da_user_activate_post = dasa.cmd.user_activate_post:main
    da_user_backup_post = dasa.cmd.user_backup_post:main
    da_user_backup_pre = dasa.cmd.user_backup_pre:main
    da_user_create_post = dasa.cmd.user_create_post:main
    da_user_destroy_post = dasa.cmd.user_destroy_post:main
    da_user_modify_post = dasa.cmd.user_create_post:main
    da_user_restore_post = dasa.cmd.user_restore_post:main
    da_user_restore_pre = dasa.cmd.user_restore_pre:main
    da_user_suspend_post = dasa.cmd.user_suspend_post:main

[wheel]
universal = 1
